--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Application for developers to connect",
   "main": "index.js",
   "scripts": {
-  "start": "node src/app.js",
-  "dev":"nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [
     "javascript",
@@ -14,6 +14,7 @@
   "author": "Dinesh K",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.19.0"
   }
 }
