--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://gittogether:kendrickmate@gittogether.s2ifqtt.mongodb.net/devMatch
 JWT_SECRET=DEVMATCH$i190
 CLIENT_URL=http://localhost:5173
+RAZORPAY_KEY_ID=rzp_test_RYx3i3otE2l8jH
+RAZORPAY_KEY_SECRET=CEHqLN8d0eLcHSoIANdXjUp4
